package com.codecool.date;

public interface DateService {
    int[] getDateValuesArray();
}
