package com.codecool.product.milk;

import com.codecool.date.DateService;
import com.codecool.date.FullDate;

public class LongLastingMilk extends Milk {


    public LongLastingMilk(String brandName, int quantity, FullDate expirationDate) {
        super(brandName, quantity, expirationDate);
    }
}
