package com.codecool.product.shovel;

public enum ShovelMaterial {
    ALUMINIUM,
    STEEL,
    PLASTIC
}
