package com.codecool.product.shovel;

public enum ShovelSize {
    SMALL,
    NORMAL,
    BIG_SIZE
}
